<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/general"
            android:title="@string/main_news" />
        <item
            android:id="@+id/business"
            android:title="@string/business" />
        <item
            android:id="@+id/entertainment"
            android:title="@string/entertainment" />
        <item
            android:id="@+id/health"
            android:title="@string/health" />
        <item
            android:id="@+id/science"
            android:title="@string/science" />
        <item
            android:id="@+id/sports"
            android:title="@string/sports" />
        <item
            android:id="@+id/technology"
            android:title="@string/technology" />
    </group>
</menu>

